@@ -2,15 +2,17 @@ package ru.job4j.jdbc;
 
 
 import java.io.InputStream;
-import java.sql.*;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.Properties;
 import java.util.StringJoiner;
 
 public class TableEditor implements AutoCloseable {
 
-    private Connection connection;
-
-    private Properties properties;
+    private final Connection connection;
+    private final Properties properties;
 
 
     public TableEditor(Properties properties) throws SQLException, ClassNotFoundException {
@@ -18,8 +20,31 @@ public class TableEditor implements AutoCloseable {
         connection = initConnection();
     }
 
-    private Connection initConnection() throws ClassNotFoundException, SQLException {
 
+    public static void main(String[] args) throws Exception {
+        Properties config = new Properties();
+        try (InputStream in = TableEditor.class.getClassLoader().getResourceAsStream("app.properties")) {
+            config.load(in);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        try (TableEditor table = new TableEditor(config)) {
+            table.createTable("supertest");
+            System.out.println(table.getTableScheme("supertest"));
+            table.addColumn("supertest", "age", "INT");
+            System.out.println(table.getTableScheme("supertest"));
+            table.renameColumn("supertest", "age", "newage");
+            System.out.println(table.getTableScheme("supertest"));
+            table.dropColumn("supertest", "newage");
+            System.out.println(table.getTableScheme("supertest"));
+            table.dropTable("supertest");
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+    }
+
+    private Connection initConnection() throws ClassNotFoundException, SQLException {
         Class.forName(properties.getProperty("connection.driver_class"));
         String url = properties.getProperty("connection.url");
         String login = properties.getProperty("username");
@@ -28,80 +53,43 @@ public class TableEditor implements AutoCloseable {
 
     }
 
-    private static Properties classLoader() throws Exception {
-        Properties config = new Properties();
-        try (InputStream in = TableEditor.class.getClassLoader().getResourceAsStream("app.properties")) {
-
-
-            config.load(in);
+    public void createStatement(String query) throws SQLException {
+        try (Statement statement = connection.createStatement()) {
+            statement.execute(query);
         }
-        return config;
     }
 
     public void createTable(String tableName) throws SQLException, ClassNotFoundException {
-
-        try (Statement statement = createStatement(connection)) {
-            String sql = String.format(
-                    "create table if not exists %s(%%s);".formatted(tableName),
-                    "id serial primary key"
-            );
-            statement.execute(sql);
-
-        }
+        String sql = String.format(
+                "create table if not exists %s(%%s);".formatted(tableName),
+                "id serial primary key");
+        createStatement(sql);
     }
 
-    public void dropTable(String tableName) {
-        try (Statement statement = createStatement(connection)) {
-            String sql = String.format(
-                    "drop table %s ", tableName
-            );
-            statement.execute(sql);
-
-        } catch (SQLException throwables) {
-            throwables.printStackTrace();
-        }
-
+    public void dropTable(String tableName) throws SQLException {
+        String sql = String.format(
+                "drop table %s ", tableName);
+        createStatement(sql);
     }
 
-    public void addColumn(String tableName, String columnName, String type) {
-        try (Statement statement = createStatement(connection)) {
-
-            String sql = String.format(
-                    "ALTER TABLE %s ADD COLUMN %s %s", tableName, columnName, type);
-            statement.execute(sql);
-
-        } catch (SQLException throwables) {
-            throwables.printStackTrace();
-        }
-
+    public void addColumn(String tableName, String columnName, String type) throws SQLException {
+        String sql = String.format(
+                "ALTER TABLE %s ADD COLUMN %s %s", tableName, columnName, type);
+        createStatement(sql);
     }
 
-    public void dropColumn(String tableName, String columnName) {
-        try (Statement statement = createStatement(connection)) {
-
-            String sql = String.format(
-                    "ALTER TABLE %s DROP COLUMN %s", tableName, columnName);
-            statement.execute(sql);
-
-        } catch (SQLException throwables) {
-            throwables.printStackTrace();
-        }
+    public void dropColumn(String tableName, String columnName) throws SQLException {
+        String sql = String.format(
+                "ALTER TABLE %s DROP COLUMN %s", tableName, columnName);
+        createStatement(sql);
     }
 
-    public void renameColumn(String tableName, String columnName, String newColumnName) {
-
-        try (Statement statement = createStatement(connection)) {
-
-            String sql =
-                    String.format("ALTER TABLE %s RENAME COLUMN %s TO %s", tableName, columnName, newColumnName
-                    );
-            statement.executeUpdate(sql);
-
-        } catch (SQLException throwables) {
-            throwables.printStackTrace();
-        }
+    public void renameColumn(String tableName, String columnName, String newColumnName) throws SQLException {
+        String sql =
+                String.format("ALTER TABLE %s RENAME COLUMN %s TO %s", tableName, columnName, newColumnName
+                );
+        createStatement(sql);
     }
-
 
     public String getTableScheme(String tableName) throws Exception {
         var rowSeparator = "-".repeat(30).concat(System.lineSeparator());
@@ -122,34 +110,10 @@ public class TableEditor implements AutoCloseable {
         return buffer.toString();
     }
 
-    public static void main(String[] args) throws Exception {
-
-
-        try (TableEditor table = new TableEditor(classLoader())) {
-
-            table.createTable("supertest");
-            System.out.println(table.getTableScheme("supertest"));
-            table.addColumn("supertest", "age", "INT");
-            System.out.println(table.getTableScheme("supertest"));
-            table.renameColumn("supertest", "age", "newage");
-            System.out.println(table.getTableScheme("supertest"));
-            table.dropColumn("supertest", "newage");
-            System.out.println(table.getTableScheme("supertest"));
-            table.dropTable("supertest");
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
-    }
-
     @Override
     public void close() throws Exception {
         if (connection != null) {
             connection.close();
         }
-    }
-
-    private Statement createStatement(Connection connection) throws SQLException {
-        return connection.createStatement();
     }
 }
